1.0.9
Fix issue when setting bccontainerhelperconfig.defaultnewcontainerparameters.credential in the same session as using it

1.0.8
Issue #1329 test whether containername is in hsts preload list
Add function Sort-AppFilesByDependencies for sorting an array of app files by dependencies
Sort apps before install in Publish-BcContainerApp
Add PrevousApps, AppSourceCopMandatoryAffixes and AppSourceCopSupportedCountries to Run-AlPipeline
Move decision on whether or not to rebuild image from New-BcContainer to New-BcImage and always call
Add parameter -skipIfImageAlreadyExists to New-BcImage
Issue #1343 Publish-BcContainerApp with ShowMyCode fails if replaceDependencies is not Set
Add parameters appPublisher and language to Install-BcContainerApp
Add parameter appPublisher Sync-BcContainerApp
Issue #1337 Add tenant parameter to Install-TestToolkitToBcContainer
Add parameter description to Run-AlPipeline
Set JUnit as default output from Run-AlPipeline

1.0.7
Issue #1299 wait for symbol file to be available in container
Add parameter AssignPremiumPlan to Run-AlPipeline
Support reading defaultNewContainerParameters from config file
Add tenant to Run-AlPipeline to allow running the pipeline in a tenant
Add ability to override functions
Addiional fixes to Run-AlPipeline
Issue #1313 -includeAL fails when using a hostHelperFolder, which is different from the containerhelperfolder
Issue #1316 New-BcContainerWizard converts license file url to lowercase
Add support for JUnit to Run-Tests
Add parameter testResultsFormat to Run-AlPipeline
Do not fail on missing image in New-BcImage (only warn)
Add properties to JUnit output

1.0.6
Add 3 new values for Select: Current, NextMinor and NextMajor for selecting artifacts. SasToken needs to be provided for NextMajor and NextMinor
Publish-BcContainerApp now supports .zip files. All .app files in the .zip file are published in alphabetic order