@@ -1,5 +1,6 @@
 1.0.9
 Fix issue when setting bccontainerhelperconfig.defaultnewcontainerparameters.credential in the same session as using it
+Add parameter AllowAppDatabaseWrite to New-BcContainerTenant. Works with generic image 0.1.0.24 or later.
 
 1.0.8
 Issue #1329 test whether containername is in hsts preload list
